# osgearth

./: .gitignore  CMakeLists.txt  conanfile.py
CMakeModules/: CXX11.cmake  FindBOOST.cmake  FindOSG.cmake  FindOpenGLES.cmake  OsgEarthMacroUtils.cmake
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/osgEarth/: CMakeLists.txt  ColorFilter  ColorFilter.cpp  DrapingTechnique  DrapingTechnique.cpp  ElevationLayer  GLUtils  GLUtils.cpp  GeoData  GeoData.cpp  HTTPClient.cpp  ImageCompositionOptions  ImageLayer  ImageLayer.cpp  IndexedColorRampOptions  IntersectionPicker.cpp  LandCover  LandCoverLayer  Layer  Layer.cpp  LineDrawable  LineDrawable.cpp  LineDrawable.glsl  MPScreenSpaceLayout  MPScreenSpaceLayout.cpp  MPScreenSpaceLayoutSG  MPScreenSpaceLayoutSG.cpp  MapNode.cpp  MapNodeOptions  MapNodeOptions.cpp  ModelLayer  ModelLayer.cpp  MultiBandsInterface  NodeUtils  NodeUtils.cpp  OverlayDecorator  OverlayDecorator.cpp  PatchLayer  PrimitiveIntersector  PrimitiveIntersector.cpp  (+30 more)
src/osgEarthAnnotation/: AnnotationLayer  AnnotationNode.cpp  AnnotationUtils  AnnotationUtils.cpp  AttachedLabelNode  AttachedLabelNode.cpp  BboxDrawable  BboxDrawable.cpp  CMakeLists.txt  FeatureNode.cpp  LabelNode.cpp  MPAnno.frag.glsl  MPAnno.vert.glsl  MPAnnotationDrawable  MPAnnotationDrawable.cpp  MPAnnotationGroup  MPAnnotationGroup.cpp  MPAnnotationGroupMG  MPAnnotationGroupMG.cpp  MPAnnotationGroupSG  MPAnnotationGroupSG.cpp  MPStateSetFontAltas  MPStateSetFontAltas.cpp  ModelNode  ModelNode.cpp  PlaceNode  PlaceNode.cpp  Shaders  Shaders.cpp.in
src/osgEarthDrivers/: CMakeLists.txt
src/osgEarthFeatures/: BufferFilter.cpp  BuildGeometryFilter  BuildGeometryFilter.cpp  BuildTextFilter.cpp  CMakeLists.txt  CropFilter.cpp  ExtrudeGeometryFilter.cpp  Feature  Feature.cpp  FeatureDisplayLayout  FeatureDisplayLayout.cpp  FeatureMaskLayer  FeatureModelGraph  FeatureModelGraph.cpp  FeatureModelLayer  FeatureModelSource  FeatureModelSource.cpp  FeatureSource  FeatureSource.cpp  FeatureSourceLayer  GeometryCompiler  GeometryCompiler.cpp  ImageToFeatureLayer  OgrUtils.cpp  Session  Session.cpp  TessellateOperator  TessellateOperator.cpp  TextSymbolizer.cpp
src/osgEarthSplat/: GroundCoverLayer  RoadSurfaceLayer  SplatLayer
src/osgEarthSymbology/: AGG.h  BBoxSymbol  BBoxSymbol.cpp  BufferParameters.h  CMakeLists.txt  Geometry  Geometry.cpp  IconSymbol  IconSymbol.cpp  LineSymbol.cpp  ModelSymbol  ModelSymbol.cpp  Stroke  Stroke.cpp  Symbol.cpp  TextSymbol  TextSymbol.cpp  boostBuffer.cpp  boostBuffer.h  boostGeoTypes.h  boostGeometryAPI.cpp  boostGeometryAPI.h
src/osgEarthUtil/: CMakeLists.txt  EarthManipulator.cpp  ExampleResources.cpp  FractalElevationLayer  GARSGraticule  GeodeticGraticule  MGRSGraticule  MultiBandRampColorFilter  MultiBandRampColorFilter.cpp  MultiElevationLayer  SimpleOceanLayer  UTMGraticule
(+22 files in other folders)
